--- a/Lab 2/about.html
+++ b/Lab 2/about.html
@@ -17,17 +17,16 @@
             <h1>Widgets and Things</h1>
         </header>
         <nav> 
-                <a class="active" href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
+                <a class="active" href="about.html">About</a>
                 <a href="products.html">Products</a>
         </nav>
         <main>
-            <h2>Welcome to Widgets and Things!</h2>
+            <h2>About Widgets and Things!</h2>
             <p>Harry Truman, Doris Day, Red China, Johnnie Ray South Pacific, Walter Winchell, Joe DiMaggio Joe McCarthy, Richard Nixon, Studebaker, television North Korea, South Korea, Marilyn Monroe Rosenbergs, H-bomb, Sugar Ray, Panmunjom Brando, "The King and I", and "The Catcher in the Rye" Eisenhower, Vaccine, England's got a new queen Marciano, Liberace, Santayana, goodbye We didn't start the fire It was always burning, since the world's been turning We didn't start the fire No, we didn't light it, but we tried to fight it</p>
         
-            <img src="Images/lecture2/images/product1.svg" alt="Product 1">
+            <img src="Images/lecture2/images/about.svg" alt="About">
 
-            <p>Harry Truman, Doris Day, Red China, Johnnie Ray South Pacific, Walter Winchell, Joe DiMaggio Joe McCarthy, Richard Nixon, Studebaker, television North Korea, South Korea, Marilyn Monroe Rosenbergs, H-bomb, Sugar Ray, Panmunjom Brando, "The King and I", and "The Catcher in the Rye" Eisenhower, Vaccine, England's got a new queen Marciano, Liberace, Santayana, goodbye We didn't start the fire It was always burning, since the world's been turning We didn't start the fire No, we didn't light it, but we tried to fight it</p>
         </main>
         <footer>&copy; 2021 Widgets and Things</footer>
     </div>
