--- a/Lab 2/products.html
+++ b/Lab 2/products.html
@@ -17,17 +17,33 @@
             <h1>Widgets and Things</h1>
         </header>
         <nav> 
-                <a class="active" href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="products.html">Products</a>
+                <a href="index.html">Home</a>
+                <a  href="about.html">About</a>
+                <a class="active" href="products.html">Products</a>
         </nav>
         <main>
-            <h2>Welcome to Widgets and Things!</h2>
+            <h2>Widgets and Things Products</h2>
             <p>Harry Truman, Doris Day, Red China, Johnnie Ray South Pacific, Walter Winchell, Joe DiMaggio Joe McCarthy, Richard Nixon, Studebaker, television North Korea, South Korea, Marilyn Monroe Rosenbergs, H-bomb, Sugar Ray, Panmunjom Brando, "The King and I", and "The Catcher in the Rye" Eisenhower, Vaccine, England's got a new queen Marciano, Liberace, Santayana, goodbye We didn't start the fire It was always burning, since the world's been turning We didn't start the fire No, we didn't light it, but we tried to fight it</p>
-        
-            <img src="Images/lecture2/images/product1.svg" alt="Product 1">
 
-            <p>Harry Truman, Doris Day, Red China, Johnnie Ray South Pacific, Walter Winchell, Joe DiMaggio Joe McCarthy, Richard Nixon, Studebaker, television North Korea, South Korea, Marilyn Monroe Rosenbergs, H-bomb, Sugar Ray, Panmunjom Brando, "The King and I", and "The Catcher in the Rye" Eisenhower, Vaccine, England's got a new queen Marciano, Liberace, Santayana, goodbye We didn't start the fire It was always burning, since the world's been turning We didn't start the fire No, we didn't light it, but we tried to fight it</p>
+            <h3 class="pro_head">Product Line:</h3>
+
+            <h3 class="pro_head">Product 1</h3>
+            <img src="Images/lecture2/images/product1.svg" alt="Product">
+
+            <h3 class="pro_head">Product 2</h3>
+            <img src="Images/lecture2/images/product2.svg" alt="Product">
+
+            <h3 class="pro_head">Product 3</h3>
+            <img src="Images/lecture2/images/product3.svg" alt="Product">
+
+            <h3 class="pro_head">Product 4</h3>
+            <img src="Images/lecture2/images/product4.svg" alt="Product">
+
+            <h3 class="pro_head">Product 5</h3>
+            <img src="Images/lecture2/images/product5.svg" alt="Product">
+
+            
+
         </main>
         <footer>&copy; 2021 Widgets and Things</footer>
     </div>
