--- a/Lab 4/index.html
+++ b/Lab 4/index.html
@@ -4,30 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunnydale Golf Course</title>
+    <title>Sunnydale Mini Golf Course</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="normalize.CSS">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="container">
-    <header></header>
+    <header>
+        <h1>Sunndydale Mini Golf</h1>
+
+    </header>
     <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="media.html">media</a></li>
-            <li><a href="gallery.html">gallery</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
         <div id="upper_flex">
             <section>
-                <h2> Welcome to Sunnydale!</h2>
-                <p> filler text </p>
+                <h2> Welcome to Sunnydale Mini Golf!</h2>
+                <p> Miniature golf, also known as minigolf, mini-putt, goofy golf, crazy golf, or putt-putt, is an offshoot of the sport of golf focusing solely on the putting aspect of its parent game. The aim of the game is to score the lowest number of points. It is played on courses consisting of a series of holes  similar to its parent, but characterized by their short length .
+                    The game uses artificial putting surfaces, a geometric layout often requiring non-traditional putting lines such as bank shots, and artificial obstacles such as tunnels, tubes, ramps, moving obstacles such as windmills, and walls of concrete, metal, or fiberglass. </p>
                 <img src="images/birdie.png" alt="Birdie">
             </section>
             <aside>
                 <h3> Schedule a tea time</h3>
-                <p> filler text</p>
+                <p> While the international sports organization World Minigolf Sport Federation  prefers to use the name "minigolf", the general public in different countries has also many other names for the game: miniature golf, mini-golf, midget golf, goofy golf, shorties, extreme golf, crazy golf, adventure golf, mini-putt, putter golf and so on. The name Putt-Putt is the trademark of an American company that builds and franchises miniature golf courses in addition to other family-oriented entertainment, and the term "putt-putt" is sometimes used colloquially to refer to the game itself.</p>
                 <img src="images/golf3.png" alt="Golf3">
             </aside>
         </div>
@@ -35,24 +42,25 @@
         <div id="lower_flex">
             <div class="col">
                 <h3>Sunnydale Media</h3>
-                <p> Filler Text media</p>
+                <p> One of the first documented minigolf courses in mainland Europe was built in 1926 by Fr. Schröder in Hamburg, Germany. Mr. Schröder had been inspired by his visit to the United States, where he had seen minigolf courses spreading across the country.</p>
                 <img src="images/drange2.jpg" alt="Drange">
                 <a class="button" href="media.html">Learn More...</a>
             </div>
             <div class="col">
                 <h3>Sunnydale gallery</h3>
-                <p> Filler Text gallery</p>
-                <img src="images/drange2.jpg" alt="Drange">
+                <p> The earliest documented minigolf competitions were played in the United States. The first National Tom Thumb Open minigolf tournament was arranged in 1930, with a total cash purse $10,000 . Qualification play-offs were played in all of the 48 states, and the final competition on Lookout Mountain, Chattanooga, Tennessee, attracted over 200 players representing thirty states.</p>
+                <img src="images/drange3.jpg" alt="Drange">
                 <a class="button" href="gallery.html">Learn More...</a>
             </div>
-            <div class="col"></div>
+            <div class="col">
             <h3>Sunnydale Blog</h3>
-                <p> Filler Text media</p>
-                <img src="images/drange2.jpg" alt="Drange">
+                <p> In 1938 Joseph and Robert Taylor from Binghamton, New York, started building and operating their own miniature golf courses. These courses differed from the ones in the late 20s and early 30s; they were no longer just rolls, banks, and curves, with an occasional pipe thrown in. Their courses not only had landscaping, but also obstacles, including windmills, castles, and wishing wells.</p>
+                <img src="images/drange1.jpg" alt="Drange">
                 <a class="button" href="media.html">Learn More...</a>
+            </div>
         </div>
     </main>
-    <footer>&copy; 2021 Sunnydale</footer>
+    <footer>&copy; 2021 Sunnydale Minigolf</footer>
 
 </div>
 </body>
